--- a/.github/workflows/add_design_reviewers.yml
+++ b/.github/workflows/add_design_reviewers.yml
@@ -9,6 +9,8 @@ on:
     types:
       - labeled
 
+permissions: read-all|write-all
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -22,6 +24,7 @@ jobs:
       - name: Add reviewer
         uses: actions/github-script@v3
         with:
+          github-token: '${{secrets.GITHUB_TOKEN}}'
           script: |
             const issue_number = context.issue.number;
             if (context.payload.label.name === 'Design') {
