--- a/.github/workflows/add_design_reviewers.yml
+++ b/.github/workflows/add_design_reviewers.yml
@@ -1,37 +1,48 @@
-# This is a basic workflow to help you get started with Actions
+name: Add Design Label and Request Reviews
 
-name: Add a Reviewer based on label
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   pull_request:
     types:
-      - labeled
+      - opened
 
-permissions: read-all|write-all
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  add_reviewer:
-    # The type of runner that the job will run on
+  add-label-and-request-reviews:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Add reviewer
-        uses: actions/github-script@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
         with:
-          github-token: '${{secrets.GITHUB_TOKEN}}'
+          node-version: 16
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Add Design Label
+        uses: actions/github-script@v6
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const issue_number = context.issue.number;
-            if (context.payload.label.name === 'Design') {
-              github.pulls.requestReviewers({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                pull_number: issue_number,
-                reviewers: ['@pranshudobhal']
-              }) 
-            }
+            const labels = ['Design'];
+            github.rest.issues.addLabels({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              labels: labels
+            });
+
+      - name: Request Reviews
+        uses: actions/github-script@v6
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const reviewers = ['@pranshudobhal']; // Add your reviewers' usernames
+            github.rest.pulls.requestReviewers({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: context.issue.number,
+              reviewers: reviewers
+            });
