--- a/.github/workflows/add_design_reviewers.yml
+++ b/.github/workflows/add_design_reviewers.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           github-token: ${{ secrets.MY_PAT }}
           script: |
-            const reviewers = ['@pranshudobhal']; // Add your reviewers' usernames
+            const reviewers = ['pranshudobhal']; // Add your reviewers' usernames
             github.rest.pulls.requestReviewers({
               owner: context.repo.owner,
               repo: context.repo.repo,
