--- a/.github/workflows/add_design_reviewers.yml
+++ b/.github/workflows/add_design_reviewers.yml
@@ -23,7 +23,7 @@ jobs:
         if: steps.check-label.outputs.hasDesignLabel == 'true'
         uses: actions/github-script@v6
         with:
-          github-token: ${{ secrets.MY_PAT }}
+          github-token: ${{ secrets.MY_PAT }} // Try removing this once
           script: |
             const reviewers = ['lavanyasengar22']; // Add your reviewers' usernames
             github.rest.pulls.requestReviewers({
